tests/error/compound_assignment_for_bool_with_rhs_of_string_type.c
// fail "has to be of integer type, but is of type 'char[15]'."

void ident_10(void){
	_Bool ident_5;
	ident_5 &= "xr0e2urr22i2iu";
}
